--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-   <big>Fortnite balls. :)</big>
-
+   <center>
+   <img src="img/poggy.png" width="1000"/>
+      
+   <h1><big><big>Fortnite balls. :)</big></big></h1>
+   </center>
 </body>
 </html>
 
