revised to keep stuff

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <center>
    <img src="img/poggy.png" width="1000"/>
       
-   <h1><big><big>Fortnite balls. :)</big></big></h1>
+   <h1><big><big>"I literally love bullying people."<br><br>- Pogman</big></big></h1>
    </center>
 </body>
 </html>
