--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Pogman</title>
+  <title>ECE 2026</title>
 
 </head>
 
 <body>
-   <center>
-   <img src="img/poggy.png" width="1000"/>
-      
-   <h1><big><big>"I literally love bullying people."<br><br>- Pogman</big></big></h1>
-   </center>
+   <center>      
+    <h1>Hi there folks! You've made it to ECE 2026's wiki and profile page.</h1>
+    At the moment it's pretty empty, but soon can be expected to have a good amount of stuff on it.
+    <br>
+    If you have suggestions, please make a pull request with your suggestions added to the README.
+    <br>
+    - Aiden
+  </center>
 </body>
 </html>
 
