fixed the message

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
    <center>      
     <h1>Hi there folks! You've made it to ECE 2026's wiki and profile page.</h1>
+    <h1>
     At the moment it's pretty empty, but soon can be expected to have a good amount of stuff on it.
     <br>
-    If you have suggestions, please make a pull request with your suggestions added to the README.
+    If you have suggestions or want to make contributings, please read CONTRIBUTING.md.
     <br>
     - Aiden
+    </h1> 
   </center>
 </body>
 </html>
