--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
  <!DOCTYPE html>
  <html>
 	 <head>
+		 	 <link rel="stylesheet" href="cool.css">  
+
 		 <title>Electrical and Computer Engineering Class of 2026</title>
 	 <body>
 
