--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 	 <body>
 
 		 <h1>Essays on Shitty-ness</h1>
-<p>
-	Things are not bad in themselves, but our cowardice makes them so. 
-	- Michel de Montaigne
-		 </p>
-<p>
+                 <div class="cool">
+                        <p>
+                                Things are not bad in themselves, but our cowardice makes them so. 
+                                - Michel de Montaigne
+                                         </p>
+                        <p>
+                                <a href="./kam.html">KAM</a> 
+                        </p>
+                 </div>
+
 	<a href="./kam.html">KAM</a> 
 </p>
 
