update for midterms

--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
- <!DOCTYPE html>
+i <!DOCTYPE html>
  <html>
-	 <head>
-		 	 <link rel="stylesheet" href="cool.css">  
+	<head>
 
-		 <title>Electrical and Computer Engineering Class of 2026</title>
-	 <body>
+	<title>uWaterloo ECE S4</title>
+	<img src="./thatgirlstudy.png">
 
-		 <h1>Essays on Shitty-ness</h1>
-                 <div class="cool">
-                        <p>
-                                Things are not bad in themselves, but our cowardice makes them so. 
-                                - Michel de Montaigne
-                                         </p>
-                        <p>
-                                <a href="./kam.html">KAM</a> 
-                        </p>
-                 </div>
-
-	<a href="./kam.html">KAM</a> 
-</p>
 
 
  </html> 
