--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ i <!DOCTYPE html>
 	<head>
 
 	<title>uWaterloo ECE S4</title>
-	<img src="./thatgirlstudy.png">
+	<img src="./thatgirlstudy.jpg">
 
 
 
