--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-i <!DOCTYPE html>
- <html>
-	<head>
-
-	<title>uWaterloo ECE S4</title>
-	<img src="./thatgirlstudy.jpg">
-
-
-
- </html> 
+university of waterloo ece class of 2026 go brrrr
